* important changes in version 1.80 13/10/2011
- patch from Rocky Bernstein to add file chown() method [rt#71221]

* important changes in version 1.78 08/09/2011
- patch from Rocky Bernstein to add chown() method [rt#70623]
- blead patch from Alexandr Ciornii to resolve [perl#78708]

* important changes in version 1.76 07/01/2011
- upstream blead patches from Peter Acklam

* important changes in version 1.74 18/12/2010
- Skip extracting pax extended headers, reported as
  RT #64038

* important changes in version 1.72 18/11/2010
- Apply patch from Grant McLean to update docs for
  ptargrep

* important changes in version 1.70 15/11/2010
- Add ptargrep utility courtesy of Grant McLean

* important changes in version 1.68 17/08/2010
- Apply a patch from Colin Newell that checks whether long files can be created or
  not in 02_methods.t. Hopefully resolves RT #57312 and RT #56163

* important changes in version 1.66 26/07/2010
- Applied a patch from Alexandr Ciornii [RT#59699] to Makefile.PL which produces better META.yml
- Apply a patch from Alexandr Ciornii to ptar [RT#59700]:

    Adds option -C to allow archives created with ptar to be uploaded to
    PAUSE in case of Windows or world +w permissions on unix.

* important changes in version 1.64 09/07/2010
- Removed the PERL_CORE specific chdir from all the tests
- Apply a patch from David Muir Sharnoff RT #58916,
  "skip files via a callback and limit memory use when skipping files"
- Apply a patch from Daphne Pfister RT #59150
  "Assumes all references filename are IO::Handle's instead of trying to stringify."

* important changes in version 1.62 28/06/2010
- Apply part of patch from https://bugzilla.redhat.com/attachment.cgi?id=426194
  reported by Martin Cermak in RT #58636 relating to a Redhat ticket
  https://bugzilla.redhat.com/show_bug.cgi?id=606813

* important changes in version 1.60 23/04/2010
- Apply patch from Darrell K. [RT #54850] that makes write() and create_archive() close only handles