@@ -4,7 +4,7 @@
       "Jos Boumans <kane[at]cpan.org>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 6.59, CPAN::Meta::Converter version 2.112621",
+   "generated_by" : "ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621",
    "license" : [
       "perl_5"
    ],
@@ -51,5 +51,5 @@
          "url" : "https://github.com/jib/archive-tar-new"
       }
    },
-   "version" : "1.80"
+   "version" : "1.82"
 }
